@@ -1093,6 +1093,11 @@ static dbus_bool_t bluealsa_dbus_message_iter_get_pcm_props_cb(const char *key,
 		else if (strcmp(tmp, "sink") == 0)
 			pcm->mode = BA_PCM_MODE_SINK;
 	}
+	else if (strcmp(key, "Running") == 0) {
+		if (type != (type_expected = DBUS_TYPE_BOOLEAN))
+			goto fail;
+		dbus_message_iter_get_basic(&variant, &pcm->running);
+	}
 	else if (strcmp(key, "Format") == 0) {
 		if (type != (type_expected = DBUS_TYPE_UINT16))
 			goto fail;
